crates/oxc_css_parser/tests/error/scss/at-rule/use/url.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: string is expected
  ┌─ url.scss:1:6
  │
1 │ @use foo;
  │      ^^^


